samples/_failures_safe/1761521289_493ef1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b997eb3.c: In function ‘main’:
./samples/SAFE/__tmp_7b997eb3.c:156:5: error: expected expression at end of input
  156 |     if (!multiply_matrices(&a, &b, &result))
      |     ^~
./samples/SAFE/__tmp_7b997eb3.c:156:5: error: expected declaration or statement at end of input
